# DSA

./: .gitignore  LICENSE  README.md  TestDMD.ipynb  dmd.py  pyproject.toml  setup.py
.ipynb_checkpoints/: TestDMD-checkpoint.ipynb
DSA/: __init__.py  base_dmd.py  controllability_simdist.py  dmd.py  dmdc.py  dsa.py  kerneldmd.py  preprocessing.py  resdmd.py  simdist.py  simdist_controllability.py  stats.py  subspace_dmdc.py  sweeps.py
DSA.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
DSA/pykoopman/: __init__.py  koopman.py  koopman_continuous.py
DSA/pykoopman/analytics/: _base_analyzer.py  _ms_pd21.py  _pruned_koopman.py
DSA/pykoopman/common/: __init__.py
DSA/pykoopman/differentiation/: _derivative.py
DSA/pykoopman/observables/: _base.py  _custom_observables.py  _identity.py  _polynomial.py  _radial_basis_functions.py  _random_fourier_features.py  _time_delay.py
DSA/pykoopman/regression/: __init__.py  _base.py  _base_ensemble.py  _dmd.py  _dmdc.py  _edmd.py  _edmdc.py  _havok.py  _kdmd.py  _nndmd.py
DSA/pykoopman/src/pykoopman/observables/: _base.py  _radial_basis_functions.py
examples/: all_dsa_types.ipynb  dmd_lorenz.ipynb  dmdc_linear_system_test.ipynb  dsa_fig3_tutorial.ipynb  dsa_koopstd_fix.ipynb  fig2_real.ipynb  fig3_tutorial.ipynb  how_to_use_dsa_tutorial.ipynb  inputdsa_fig2_tutorial.ipynb  residual.ipynb  ring_attractors.ipynb  sweep_resdmd_tutorial.ipynb
examples/.ipynb_checkpoints/: dmd_lorenz-checkpoint.ipynb
tests/: dmd_test.py  dsa_test.py  pykoopman_test.py  simdist_test.py  test_sweeps.py  test_wasserstein_optimization.py
(+1 files in other folders)
