[project]
name = "dsa-metric"
version = "1.0.1"
authors = [
  { name="Mitchell Ostrow", email="ostrow@mit.edu" },
]
description = "Dynamical Similarity Analysis"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE*"]

[project.urls]
Homepage = "https://github.com/mitchellostrow/DSA"
Issues = "https://github.com/mitchellostrow/DSA/issues"