[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dsa-metric"
version = "2.0.0"
authors = [
  { name="Mitchell Ostrow", email="ostrow@mit.edu" },
]
description = "Dynamical Similarity Analysis"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE*"]

dependencies = [
    "numpy>=1.24.0,<2",
    "torch>=1.3.0",
    "pot",
    "omegaconf",
    "pydmd",
    "tqdm",
    "optht",
    "derivative",
    "lightning",
    "prettytable"
]

[project.optional-dependencies]
dev = [
    "pytest>=3.7"
]
umap = [
    "umap-learn"
]

[project.urls]
Homepage = "https://github.com/mitchellostrow/DSA"
Issues = "https://github.com/mitchellostrow/DSA/issues"